test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/sizeof_type_no_parens.plx
# you can't get the size of a type name without parenthesizing it
pub fn main(none) i32 {
    return sizeof i32
}
